force-app/main/default/objects/RTEventClose__c/RTEventClose__c.object-meta.xml
<CustomObject>
    <description>Contains information regarding billing of RTEvent objects. Used to calculate Other Charges and Credits</description>
    <label>RT Event Close</label>
    <nameField>
        <label>Event Close Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RT Event Close</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>