force-app/main/default/objects/RTEventClose__c/fields/Additional_Minutes_Rate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Minutes_Rate__c</fullName>
    <description>Extended Duration Charge amount (per 30 minutes)</description>
    <inlineHelpText>Extended Duration Charge amount (per 30 minutes)</inlineHelpText>
    <label>Additional Minutes Rate</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>