force-app/main/default/objects/RTEventClose__c/fields/Additional_Participants_Rate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Participants_Rate__c</fullName>
    <description>Additional Participant Charge amount (per 100 participants)</description>
    <inlineHelpText>Additional Participant Charge amount (per 100 participants)</inlineHelpText>
    <label>Additional Participants Rate</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>