force-app/main/default/objects/RTEventClose__c/fields/Base_Event_Charge__c.field-meta.xml
<CustomField>
    <fullName>Base_Event_Charge__c</fullName>
    <description>Base Event Charge amount (defaulted from Account ,based on event type)</description>
    <inlineHelpText>Base Event Charge amount (defaulted from Account ,based on event type)</inlineHelpText>
    <label>Base Event Charge</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>