force-app/main/default/objects/RTEventClose__c/fields/ITF_Add_on_Rate__c.field-meta.xml
<CustomField>
    <fullName>ITF_Add_on_Rate__c</fullName>
    <description>ITF Add-on Rate Override</description>
    <inlineHelpText>ITF Add-on Rate Override</inlineHelpText>
    <label>ITF Add-on Rate</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>