force-app/main/default/objects/RTEventClose__c/fields/Live_Event_Monitoring_Rate__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Monitoring_Rate__c</fullName>
    <description>Charge amount for Live Event Monitoring (if applicable)</description>
    <inlineHelpText>Charge amount for Live Event Monitoring (if applicable)</inlineHelpText>
    <label>Live Event Monitoring Rate</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>