force-app/main/default/objects/RTEventClose__c/fields/Premium_Op_Assist_Rate__c.field-meta.xml
<CustomField>
    <fullName>Premium_Op_Assist_Rate__c</fullName>
    <description>Charge Amount for Op-Assist Premium w/ Gold or Platinum Broadcast Audio</description>
    <inlineHelpText>Charge Amount for Op-Assist Premium w/ Gold or Platinum Broadcast Audio</inlineHelpText>
    <label>Premium Op-Assist Rate</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>