force-app/main/default/objects/RTEventClose__c/fields/RT_Event__c.field-meta.xml
<CustomField>
    <fullName>RT_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent event</description>
    <label>RT Event</label>
    <referenceTo>RTEvent__c</referenceTo>
    <relationshipLabel>RT Event Close</relationshipLabel>
    <relationshipName>RT_Event_Close</relationshipName>
    <type>Lookup</type>
</CustomField>