force-app/main/default/objects/RTEventClose__c/fields/RT_RTEventClose_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_RTEventClose_Id__c</fullName>
    <description>Migration</description>
    <externalId>true</externalId>
    <label>RT RTEventClose Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>