force-app/main/default/objects/RTEventClose__c/validationRules/AdditionalMin_non_neg.validationRule-meta.xml
<ValidationRule>
    <fullName>AdditionalMin_non_neg</fullName>
    <active>true</active>
    <errorConditionFormula>Additional_Minutes_Rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Additional_Minutes_Rate__c</errorDisplayField>
    <errorMessage>Additional Minutes Rate must be greater or equal to 0.00</errorMessage>
</ValidationRule>