force-app/main/default/objects/RTEventClose__c/validationRules/AdditionalPart_non_neg.validationRule-meta.xml
<ValidationRule>
    <fullName>AdditionalPart_non_neg</fullName>
    <active>true</active>
    <errorConditionFormula>Additional_Participants_Rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Additional_Participants_Rate__c</errorDisplayField>
    <errorMessage>Additional Participants Rate must be greater or equal to 0.00</errorMessage>
</ValidationRule>