force-app/main/default/objects/RTEventClose__c/validationRules/Base_Event_non_neg.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Event_non_neg</fullName>
    <active>true</active>
    <errorConditionFormula>Base_Event_Charge__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Base_Event_Charge__c</errorDisplayField>
    <errorMessage>Base Event Charge must be &gt;= 0.00</errorMessage>
</ValidationRule>