force-app/main/default/objects/RTEventClose__c/validationRules/ITF_Addon_rate_non_neg.validationRule-meta.xml
<ValidationRule>
    <fullName>ITF_Addon_rate_non_neg</fullName>
    <active>true</active>
    <errorConditionFormula>ITF_Add_on_Rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>ITF_Add_on_Rate__c</errorDisplayField>
    <errorMessage>ITF Add-on Rate must be &gt;= 0.00</errorMessage>
</ValidationRule>