force-app/main/default/objects/RTEventClose__c/validationRules/Live_Event_Monitoring_non_neg.validationRule-meta.xml
<ValidationRule>
    <fullName>Live_Event_Monitoring_non_neg</fullName>
    <active>true</active>
    <errorConditionFormula>Live_Event_Monitoring_Rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Live_Event_Monitoring_Rate__c</errorDisplayField>
    <errorMessage>Live Event Monitoring rate must be &gt;= 0.00</errorMessage>
</ValidationRule>