force-app/main/default/objects/RTEventClose__c/validationRules/Premium_Op_Assist_non_neg.validationRule-meta.xml
<ValidationRule>
    <fullName>Premium_Op_Assist_non_neg</fullName>
    <active>true</active>
    <errorConditionFormula>Premium_Op_Assist_Rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Premium_Op_Assist_Rate__c</errorDisplayField>
    <errorMessage>Premium Op-Assist Rate must be &gt;= 0.00</errorMessage>
</ValidationRule>