force-app/main/default/objects/RTEventClose__c/validationRules/RT_Event_ref_required.validationRule-meta.xml
<ValidationRule>
    <fullName>RT_Event_ref_required</fullName>
    <active>true</active>
    <description>Make sure the RT_Event__c is populated with a value</description>
    <errorConditionFormula>LEN(TRIM(RT_Event__c)) = 0</errorConditionFormula>
    <errorMessage>RTEventClose record must be associated with a RTEvent.</errorMessage>
</ValidationRule>